Mon Jan  7 14:38:51 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (convert_type): backport from 1.7 to avoid NameError
	  messages with -d option.

Mon Jan  7 12:38:47 2002  Tanaka Akira  <akr@m17n.org>

        * lib/time.rb (Time#xmlschema): new optional argument 
	fractional_seconds to specify a number of digits of
	fractional part of the time.

Sat Jan  5 03:07:34 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_new2): NULL pointer check added.

Sat Jan  5 00:19:12 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* parse.y (yycompile): strdup()'ed twice.

Fri Jan  4 18:29:10 2002  Michal Rokos  <m.rokos@sh.cvut.cz>

	* class.c (rb_define_module_under): should locate predefined
	  module using rb_const_defined_at().

Fri Jan  4 17:23:49 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* misc/ruby-mode.el (ruby-forward-string): forward a string. [new]

	* misc/ruby-mode.el (ruby-parse-region): handle nested parentheses
	  in a string and terminators in #{}.

	* misc/ruby-mode.el (ruby-calculate-indent): ditto.

Wed Jan  2 23:34:25 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): add -I. to CPPFLAGS.

	* lib/mkmf.rb (create_makefile): srcdir support(.def and depend file).

Wed Jan  2 11:51:56 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* process.c (rb_f_system): abandon vfork.

	* io.c (pipe_open): ditto.

Tue Jan  1 02:16:48 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* Makefile.in (fake.rb): set RUBY_VERSION.

Mon Dec 31 14:20:46 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* parse.y (yycompile): always store copy of filename.

	* parse.y (rb_compile_file): no longer need to strdup() here.

Mon Dec 31 05:26:40 2001  Ferris McCormick  <fmccor@inforead.com>

	* defines.h: sparc linux needs different FLUSH_REGISTER_WINDOWS

Sun Dec 30 18:04:07 2001  Tanaka Akira  <akr@m17n.org>

	* time.c (time_utc_offset): new function.
