@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.6"
-#define RUBY_RELEASE_DATE "2002-01-07"
+#define RUBY_RELEASE_DATE "2002-01-08"
 #define RUBY_VERSION_CODE 166
-#define RUBY_RELEASE_CODE 20020107
+#define RUBY_RELEASE_CODE 20020108
